[package]
name = "tubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
colored = "2"
image = "0.23.14"
imageproc = "0.22.0"
serde = "1.0.135"
serde_derive = "1.0.135"
hex = "0.4.3"
toml = "0.5.8"